# llm-npc-backend

./: .env.lmstudio.example  .gitignore  404.html  AGENTS.md  API.md  CLAUDE.md  README.md  TESTING_GUIDE.md  go.mod  index.html  objects.inv  run_debug.sh  run_logviewer.sh  sitemap.xml  test_endpoints.sh
.github/workflows/: deploy-docs.yml
advanced/best-practices/: index.html
advanced/error-handling/: index.html
api/client/: index.html
api/context/: index.html
api/decorators/: index.html
api/exceptions/: index.html
api/models/: index.html
cmd/backend/: main.go
cmd/logviewer/: main.go
examples/: README.md  index.html
examples/python/: .gitignore  README.md  game_client.py  pyproject.toml  run.sh
examples/simple-game/: index.html
getting-started/: index.html
internal/api/: errors.go  middleware.go  middleware_test.go  setup_test.go
internal/cfg/: cfg.go
internal/kg/: kg.go
internal/llm/: common.go  errors.go  errors_test.go  factory.go  lmstudio.go  lmstudio_test.go  ollama.go  ollama_test.go  setup_test.go
internal/logging/: logger.go
internal/npc/: handlers.go  npc.go  npc_test.go  (+2 more)
prompts/: npc_system.txt
python-sdk/: .gitignore  DOCS_SETUP.md  README.md  mkdocs.yml  pyproject.toml
python-sdk/docs/: README.md  getting-started.md  index.md
python-sdk/docs/advanced/: best-practices.md  error-handling.md
python-sdk/docs/api/: client.md  context.md  decorators.md  exceptions.md  models.md
python-sdk/docs/examples/: index.md  simple-game.md
python-sdk/docs/user-guide/: context.md  knowledge-graphs.md  npcs.md  responses.md  tools.md
python-sdk/examples/: simple_game.py
python-sdk/llm_npc/: __init__.py  client.py  context.py  decorators.py  exceptions.py  models.py
search/: search_index.json
(+9 files in other folders)
