[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-npc"
version = "0.1.0"
description = "Python SDK for building intelligent NPCs using the LLM NPC Backend"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LLM NPC Backend Contributors"}
]
keywords = ["llm", "npc", "game", "ai", "game-development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "types-requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-npc-backend"
Documentation = "https://github.com/yourusername/llm-npc-backend/tree/main/python-sdk"
Repository = "https://github.com/yourusername/llm-npc-backend"
Issues = "https://github.com/yourusername/llm-npc-backend/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_npc*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

